<resources>
    <string name="app_name">AdminApp</string>
    <string name="fab_des">Carrinho</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="wish_list">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="example_item">Example product</string>
    <string name="categories">Categorias</string>
    <string name="view_all">Ver todas</string>
    <string name="trending">Trending</string>
    <string name="price">1,99</string>
    <string name="unit_um_kg">Unit:</string>
    <string name="feature">Feature</string>
    <string name="sing_in">Sing In</string>
    <string name="welcome">Welcome, </string>
    <string name="welcome_desc">Sing In and get all the groceries at your doorstep</string>
    <string name="mobile_number">Mobile no.</string>
    <string name="or">OR</string>
    <string name="sing_in_google">Sign in with Google</string>
    <string name="sing_up_google">Sign Up with Google</string>
    <string name="no_have_account">Don\'t have an account? <font color='#FECE01'><b>Sign Up</b></font></string>
    <string name="forgot_password">forgot password?</string>
    <string name="sing_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="name">Full name</string>
    <string name="email_address">Email address</string>
    <string name="terms_conditions">By signing up you\'re accepting the Terms and Conditions</string>
    <string name="error_msg_enter_name">Please, enter your name.</string>
    <string name="error_msg_enter_password">Please enter password.</string>
    <string name="error_msg_confirm_password">Please confirm password.</string>
    <string name="error_msg_enter_email">Please enter email.</string>
    <string name="register_completed">Thanks for registering!</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="submit">Submit</string>
    <string name="fotgot_desc">Enter your e-mail address we\'ll send you a emai to reset your password</string>
    <string name="email_sent_success">Email sent successfully to reset your password!</string>
    <string name="register_success">You are registered successfully.</string>
    <string name="male">Man</string>
    <string name="female">Woman</string>
    <string name="email">Email:</string>
    <string name="number">Cell phone:</string>
    <string name="address">Address:</string>
    <string name="storage_permissiob_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="error_msg_complete_all_fields">Please, complete all fields to continue</string>
    <string name="profile_uptade_success">Your profile is updated successfully.</string>

    <!--    <string name="title_activity_dashboard">MainActivity</string>-->
    <string name="title_home">Home</string>
    <string name="title_wishlist">WishList</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="add_addres">Add address</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="addresses">Addresses</string>
    <string name="gender">Gender:</string>
    <string name="title_complete_profile">Complete Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="action_add_product">Add Trending Product</string>

    <string name="et_hint_product_title">Product Title</string>
    <string name="et_hint_product_price">Product Price ($)</string>
    <string name="et_hint_product_old_price">Product Old Price ($)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product Quantity</string>
    <string name="product_quantity">Quantity: </string>

    <string name="error_msg_select_product_image">Please select product image.</string>
    <string name="error_msg_enter_product_title">Please enter product title.</string>
    <string name="error_msg_enter_category_title">Please enter category title.</string>
    <string name="error_msg_enter_product_old_price">Please enter product old price.</string>
    <string name="error_msg_enter_product_price">Please enter product price.</string>
    <string name="error_msg_enter_product_description">Please enter product description.</string>
    <string name="error_msg_enter_product_quantity">Please enter product quantity.</string>
    <string name="error_msg_enter_product_category">Please enter product category.</string>

    <string name="old_price">2.99</string>
    <string name="et_hint_product_category">Product Category</string>
    <string name="product_uploaded_success_message">Your product was uploaded successfully.</string>
    <string name="category_uploaded_success_message">Your category was uploaded successfully.</string>
    <string name="categories_id"><![CDATA[1 - Personal Care, 2 - Chocolate, biscuits & snacks, 3 - Fruits & Vegetables, 4 - Breakfast, dairy & cereals, 5 - Baby care, 6 - Grains, wheat & rice, 7 - Beverages]]></string>
    <string name="sign_price">$</string>
    <string name="unit_ex">1 kg, 200 g, 1 Unit., Box</string>
    <string name="et_hint_product_unit">Unit</string>
    <string name="gramas">500g</string>

    <string name="action_add_feature_product">Add Feature Product</string>
    <string name="action_add_category_product">Add Category</string>
    <string name="all_product">All Products</string>
    <string name="edit_trending_product">Edit Trending Product</string>
    <string name="edit_feature_product">Edit Feature Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="category">Category: </string>
    <string name="hortifruti"><![CDATA[Fruits & vegetables]]></string>
    <string name="twenty_five">25</string>
    <string name="view_product">View Product</string>
    <string name="add">Add Item</string>

    <string name="product_delete_success">You product was deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_product_details">Product Detail</string>
    <string name="lbl_product_description">Description</string>
    <string name="lbl_product_description_ex">Banana, pacoba ou pacova[1] é uma pseudobaga da bananeira, uma planta herbácea vivaz acaule da família Musaceae (género Musa - além do género Ensete, que produz as chamadas "falsas bananas"). São cultivadas em 130 países. Originárias do sudeste da Ásia são atualmente cultivadas em praticamente todas as regiões tropicais do planeta.Vulgarmente, inclusive para efeitos comerciais, o termo "banana" refere-se às frutas de polpa macia e doce que podem ser consumidas cruas. Contudo, existem variedades de cultivo, de polpa mais rija e de casca mais firme e verde, geralmente designadas por plátanos, em língua espanhola, banana-pão ou banana-da-terra, em português, ou plantains, em inglês, que são consumidas cozinhadas (assadas, cozidas ou fritas), constituindo o alimento base de muitas populações de regiões tropicais. A maioria das bananas para exportação é do primeiro tipo, ainda que apenas 10 a 15 por cento da produção mundial seja para exportação, sendo os Estados Unidos e a União Europeia as principais potências importadoras.</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="in_stock">In stock:</string>
    <string name="out_of_stock">Out of stock:</string>
    <string name="number_ex">10</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="error_msg_select_category_image">Please select a category image.</string>
    <string name="orders">Orders</string>

    <string name="no_orders_placed_yet">No orders placed yet!</string>
    
    <string name="title_my_orders_details">My order details</string>
    <string name="order_details_lbl">Order details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order status</string>
    <string name="order_details_lbl_order_pending">Pending</string>
    <string name="order_details_lbl_order_shipping_address">Shipping Address</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_charge">Shipping charge</string>
    <string name="lbl_total_amount">Total amount</string>
    <string name="lbl_payment_mode">Payment mode</string>
    <string name="lbl_cash_on_delivery">Cash on delivery</string>

    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="lbl_out_of_stock">Out of stock</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>
    <string name="stock">Stock:</string>
    <string name="btn_add_to_cart">Add to cart</string>
    <string name="btn_go_to_cart">Go to cart</string>
    <string name="success_item_added_to_cart">Success adding item to cart</string>
    <string name="quantity">Quantity:</string>
    <string name="title_my_cart">My cart</string>
    <string name="no_cart_item_found">no item found</string>

</resources>