<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_local_fire_department_24"
        android:orderInCategory="1"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_add_product"
        android:icon="@drawable/ic_baseline_add_photo_alternate_24"
        android:orderInCategory="2"
        android:title="@string/add" />

    <item
        android:id="@+id/navigation_edit_trending"
        android:orderInCategory="3"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/trending" />

    <item
        android:id="@+id/navigation_edit_products"
        android:icon="@drawable/ic_baseline_edit_24"
        android:orderInCategory="4"
        android:title="@string/feature" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:orderInCategory="5"
        android:title="@string/orders" />

</menu>