<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="5dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/info_item_product"
            android:layout_width="140dp"
            android:layout_height="135dp"
            android:layout_margin="7dp"
            app:cardCornerRadius="10dp"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/item_img_product"
            android:layout_width="match_parent"
            android:padding="15dp"
            android:layout_height="match_parent"
            android:src="@drawable/bananana" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/item_list_title_product"
            android:layout_width="123dp"
            android:layout_height="19dp"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/example_item"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/info_item_product"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_delete_product"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/old_price_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/sign_price"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/item_old_price_product"
            app:layout_constraintStart_toEndOf="@id/item_list_price_product"
            app:layout_constraintTop_toTopOf="@id/item_old_price_product" />

        <TextView
            android:id="@+id/item_old_price_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/old_price"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/old_price_coin"
            app:layout_constraintTop_toBottomOf="@id/textView_item_list_unit" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black2"
            app:layout_constraintBottom_toBottomOf="@id/item_old_price_product"
            app:layout_constraintEnd_toEndOf="@id/item_old_price_product"
            app:layout_constraintStart_toStartOf="@id/item_old_price_product"
            app:layout_constraintTop_toTopOf="@id/item_old_price_product" />

        <TextView
            android:id="@+id/price_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/sign_price"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/item_list_price_product"
            app:layout_constraintStart_toStartOf="@+id/item_list_title_product"
            app:layout_constraintTop_toTopOf="@+id/item_old_price_product" />

        <TextView
            android:id="@+id/item_list_price_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/price"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/price_coin"
            app:layout_constraintTop_toTopOf="@+id/item_old_price_product" />

        <TextView
            android:id="@+id/textView_item_list_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/gramas"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/item_list_title_product"
            app:layout_constraintTop_toBottomOf="@id/item_list_title_product" />

        <TextView
            android:id="@+id/textView_item_list_title_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/category"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/item_list_title_product"
            app:layout_constraintTop_toBottomOf="@id/price_coin" />

        <TextView
            android:id="@+id/textView_item_list_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/hortifruti"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/textView_item_list_title_category"
            app:layout_constraintStart_toEndOf="@id/textView_item_list_title_category"
            app:layout_constraintTop_toTopOf="@id/textView_item_list_title_category" />

        <TextView
            android:id="@+id/textView_item_title_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/product_quantity"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/textView_item_list_title_category"
            app:layout_constraintTop_toBottomOf="@id/textView_item_list_category" />

        <TextView
            android:id="@+id/textView_item_list_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/twenty_five"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/textView_item_title_quantity"
            app:layout_constraintStart_toEndOf="@id/textView_item_title_quantity"
            app:layout_constraintTop_toTopOf="@id/textView_item_title_quantity" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_item_list_layout_edit_product"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/edit_product"
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/btn_item_list_layout_view_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_item_product" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_item_list_layout_view_product"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_bg_white"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/view_product"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_item_list_layout_edit_product"
            app:layout_constraintTop_toBottomOf="@id/info_item_product" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>