<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/item_bg"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_poster"
        android:backgroundTint="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/info_item_product"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_margin="7dp"
        android:background="@drawable/bg_poster"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/item_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_bg" />


    <ImageView
        android:id="@+id/item_img_product"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:src="@drawable/bananana"
        app:layout_constraintBottom_toBottomOf="@id/info_item_product"
        app:layout_constraintEnd_toEndOf="@id/info_item_product"
        app:layout_constraintStart_toStartOf="@id/info_item_product"
        app:layout_constraintTop_toTopOf="@id/info_item_product" />

    <TextView
        android:id="@+id/item_title_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/example_item"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_img_product" />

    <TextView
        android:id="@+id/old_price_coin"
        android:layout_width="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/sign_price"
        android:textSize="12sp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/item_old_price_product"
        app:layout_constraintTop_toTopOf="@id/item_old_price_product"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/item_old_price_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/old_price"
        android:textColor="@color/red"
        android:paddingStart="5dp"
        android:layout_marginStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/item_title_product"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/old_price_coin" />

    <View
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/item_old_price_product"
        app:layout_constraintEnd_toEndOf="@id/item_old_price_product"
        app:layout_constraintTop_toTopOf="@id/item_old_price_product"
        android:background="@color/red"
        app:layout_constraintBottom_toBottomOf="@id/item_old_price_product"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/price_coin"
        android:layout_width="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/sign_price"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/price_product"
        app:layout_constraintTop_toTopOf="@id/price_product"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/price_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/price"
        android:layout_marginStart="5dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/price_coin"
        app:layout_constraintTop_toBottomOf="@id/item_old_price_product" />

    <Button
        android:id="@+id/item_btn_unit_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/unit_um_kg"
        android:textAllCaps="false"
        android:textSize="10sp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/price_product"
        app:layout_constraintBottom_toBottomOf="@id/item_bg"
        app:layout_constraintStart_toStartOf="@id/item_bg" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@id/item_btn_unit_type"
        app:layout_constraintEnd_toEndOf="@id/item_bg"
        app:layout_constraintTop_toTopOf="@id/item_btn_unit_type">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/yellow"
            android:padding="9dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_shopping_cart_24" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>