<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_category_product_activity"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/yellow"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/no_color" />

            <TextView
                android:id="@+id/textView_title_add_feature_product"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:elevation="6dp"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar_add_category_product_activity"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/action_add_feature_product"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/frameLayout_product_category_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_add_category_product_activity">

            <ImageView
                android:id="@+id/imageView_product_category_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/yellow"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/imageView_add_update_category_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:padding="16dp"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"
                app:tint="@color/white" />

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_product_category_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/et_hint_product_category"
            app:boxCornerRadiusBottomEnd="13dp"
            app:boxCornerRadiusBottomStart="13dp"
            app:boxCornerRadiusTopEnd="13dp"
            app:boxCornerRadiusTopStart="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frameLayout_product_category_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_product_category_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_product_category_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/montserrat_medium"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
